--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,15 @@
         "label": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "accent-color",
+          "height: fit-content"
+        ]
+      }
+    ]
   }
 }
